@@ -1,3 +1,7 @@
+2012-11-27 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* operation/agentes/status_monitor.php: Added  title for metaconsole.
+
 2012-11-27  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_reporting.php
